Model for work item response. CAR-75
