# openapi_server/models/__init__.py
@@ -9,3 +9,5 @@ from openapi_server.models.cars import Cars
 from openapi_server.models.cars_info import CarsInfo
 from openapi_server.models.geometry import Geometry
 from openapi_server.models.tokens import Tokens
+from openapi_server.models.work_item import WorkItem
+from openapi_server.models.work_items import WorkItems
