# openapi_server/models/work_item.py
@@ -1,0 +1,508 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server.models.geometry import Geometry
+from openapi_server import util
+
+from openapi_server.models.geometry import Geometry  # noqa: E501
+
+class WorkItem(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, administratie=None, duur_minuten=None, start_datum_tijd=None, einddatum_tijd=None, l2_guid=None, medewerker_naam=None, medewerker_nummer=None, omschrijving=None, plaats=None, postcode=None, project_nummer=None, status=None, straat=None, toevoeging=None, uren_categorie_code=None, werkbon_nummer=None, werkbon_type=None, geometry=None):  # noqa: E501
+        """WorkItem - a model defined in OpenAPI
+
+        :param administratie: The administratie of this WorkItem.  # noqa: E501
+        :type administratie: str
+        :param duur_minuten: The duur_minuten of this WorkItem.  # noqa: E501
+        :type duur_minuten: int
+        :param start_datum_tijd: The start_datum_tijd of this WorkItem.  # noqa: E501
+        :type start_datum_tijd: datetime
+        :param einddatum_tijd: The einddatum_tijd of this WorkItem.  # noqa: E501
+        :type einddatum_tijd: datetime
+        :param l2_guid: The l2_guid of this WorkItem.  # noqa: E501
+        :type l2_guid: str
+        :param medewerker_naam: The medewerker_naam of this WorkItem.  # noqa: E501
+        :type medewerker_naam: str
+        :param medewerker_nummer: The medewerker_nummer of this WorkItem.  # noqa: E501
+        :type medewerker_nummer: str
+        :param omschrijving: The omschrijving of this WorkItem.  # noqa: E501
+        :type omschrijving: str
+        :param plaats: The plaats of this WorkItem.  # noqa: E501
+        :type plaats: str
+        :param postcode: The postcode of this WorkItem.  # noqa: E501
+        :type postcode: str
+        :param project_nummer: The project_nummer of this WorkItem.  # noqa: E501
+        :type project_nummer: str
+        :param status: The status of this WorkItem.  # noqa: E501
+        :type status: str
+        :param straat: The straat of this WorkItem.  # noqa: E501
+        :type straat: str
+        :param toevoeging: The toevoeging of this WorkItem.  # noqa: E501
+        :type toevoeging: str
+        :param uren_categorie_code: The uren_categorie_code of this WorkItem.  # noqa: E501
+        :type uren_categorie_code: str
+        :param werkbon_nummer: The werkbon_nummer of this WorkItem.  # noqa: E501
+        :type werkbon_nummer: str
+        :param werkbon_type: The werkbon_type of this WorkItem.  # noqa: E501
+        :type werkbon_type: str
+        :param geometry: The geometry of this WorkItem.  # noqa: E501
+        :type geometry: Geometry
+        """
+        self.openapi_types = {
+            'administratie': str,
+            'duur_minuten': int,
+            'start_datum_tijd': datetime,
+            'einddatum_tijd': datetime,
+            'l2_guid': str,
+            'medewerker_naam': str,
+            'medewerker_nummer': str,
+            'omschrijving': str,
+            'plaats': str,
+            'postcode': str,
+            'project_nummer': str,
+            'status': str,
+            'straat': str,
+            'toevoeging': str,
+            'uren_categorie_code': str,
+            'werkbon_nummer': str,
+            'werkbon_type': str,
+            'geometry': Geometry
+        }
+
+        self.attribute_map = {
+            'administratie': 'Administratie',
+            'duur_minuten': 'DuurMinuten',
+            'start_datum_tijd': 'StartDatumTijd',
+            'einddatum_tijd': 'EinddatumTijd',
+            'l2_guid': 'L2GUID',
+            'medewerker_naam': 'MedewerkerNaam',
+            'medewerker_nummer': 'MedewerkerNummer',
+            'omschrijving': 'Omschrijving',
+            'plaats': 'Plaats',
+            'postcode': 'Postcode',
+            'project_nummer': 'ProjectNummer',
+            'status': 'Status',
+            'straat': 'Straat',
+            'toevoeging': 'Toevoeging',
+            'uren_categorie_code': 'UrenCategorieCode',
+            'werkbon_nummer': 'WerkbonNummer',
+            'werkbon_type': 'WerkbonType',
+            'geometry': 'geometry'
+        }
+
+        self._administratie = administratie
+        self._duur_minuten = duur_minuten
+        self._start_datum_tijd = start_datum_tijd
+        self._einddatum_tijd = einddatum_tijd
+        self._l2_guid = l2_guid
+        self._medewerker_naam = medewerker_naam
+        self._medewerker_nummer = medewerker_nummer
+        self._omschrijving = omschrijving
+        self._plaats = plaats
+        self._postcode = postcode
+        self._project_nummer = project_nummer
+        self._status = status
+        self._straat = straat
+        self._toevoeging = toevoeging
+        self._uren_categorie_code = uren_categorie_code
+        self._werkbon_nummer = werkbon_nummer
+        self._werkbon_type = werkbon_type
+        self._geometry = geometry
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'WorkItem':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The WorkItem of this WorkItem.  # noqa: E501
+        :rtype: WorkItem
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def administratie(self):
+        """Gets the administratie of this WorkItem.
+
+
+        :return: The administratie of this WorkItem.
+        :rtype: str
+        """
+        return self._administratie
+
+    @administratie.setter
+    def administratie(self, administratie):
+        """Sets the administratie of this WorkItem.
+
+
+        :param administratie: The administratie of this WorkItem.
+        :type administratie: str
+        """
+
+        self._administratie = administratie
+
+    @property
+    def duur_minuten(self):
+        """Gets the duur_minuten of this WorkItem.
+
+
+        :return: The duur_minuten of this WorkItem.
+        :rtype: int
+        """
+        return self._duur_minuten
+
+    @duur_minuten.setter
+    def duur_minuten(self, duur_minuten):
+        """Sets the duur_minuten of this WorkItem.
+
+
+        :param duur_minuten: The duur_minuten of this WorkItem.
+        :type duur_minuten: int
+        """
+
+        self._duur_minuten = duur_minuten
+
+    @property
+    def start_datum_tijd(self):
+        """Gets the start_datum_tijd of this WorkItem.
+
+
+        :return: The start_datum_tijd of this WorkItem.
+        :rtype: datetime
+        """
+        return self._start_datum_tijd
+
+    @start_datum_tijd.setter
+    def start_datum_tijd(self, start_datum_tijd):
+        """Sets the start_datum_tijd of this WorkItem.
+
+
+        :param start_datum_tijd: The start_datum_tijd of this WorkItem.
+        :type start_datum_tijd: datetime
+        """
+
+        self._start_datum_tijd = start_datum_tijd
+
+    @property
+    def einddatum_tijd(self):
+        """Gets the einddatum_tijd of this WorkItem.
+
+
+        :return: The einddatum_tijd of this WorkItem.
+        :rtype: datetime
+        """
+        return self._einddatum_tijd
+
+    @einddatum_tijd.setter
+    def einddatum_tijd(self, einddatum_tijd):
+        """Sets the einddatum_tijd of this WorkItem.
+
+
+        :param einddatum_tijd: The einddatum_tijd of this WorkItem.
+        :type einddatum_tijd: datetime
+        """
+
+        self._einddatum_tijd = einddatum_tijd
+
+    @property
+    def l2_guid(self):
+        """Gets the l2_guid of this WorkItem.
+
+
+        :return: The l2_guid of this WorkItem.
+        :rtype: str
+        """
+        return self._l2_guid
+
+    @l2_guid.setter
+    def l2_guid(self, l2_guid):
+        """Sets the l2_guid of this WorkItem.
+
+
+        :param l2_guid: The l2_guid of this WorkItem.
+        :type l2_guid: str
+        """
+
+        self._l2_guid = l2_guid
+
+    @property
+    def medewerker_naam(self):
+        """Gets the medewerker_naam of this WorkItem.
+
+
+        :return: The medewerker_naam of this WorkItem.
+        :rtype: str
+        """
+        return self._medewerker_naam
+
+    @medewerker_naam.setter
+    def medewerker_naam(self, medewerker_naam):
+        """Sets the medewerker_naam of this WorkItem.
+
+
+        :param medewerker_naam: The medewerker_naam of this WorkItem.
+        :type medewerker_naam: str
+        """
+
+        self._medewerker_naam = medewerker_naam
+
+    @property
+    def medewerker_nummer(self):
+        """Gets the medewerker_nummer of this WorkItem.
+
+
+        :return: The medewerker_nummer of this WorkItem.
+        :rtype: str
+        """
+        return self._medewerker_nummer
+
+    @medewerker_nummer.setter
+    def medewerker_nummer(self, medewerker_nummer):
+        """Sets the medewerker_nummer of this WorkItem.
+
+
+        :param medewerker_nummer: The medewerker_nummer of this WorkItem.
+        :type medewerker_nummer: str
+        """
+
+        self._medewerker_nummer = medewerker_nummer
+
+    @property
+    def omschrijving(self):
+        """Gets the omschrijving of this WorkItem.
+
+
+        :return: The omschrijving of this WorkItem.
+        :rtype: str
+        """
+        return self._omschrijving
+
+    @omschrijving.setter
+    def omschrijving(self, omschrijving):
+        """Sets the omschrijving of this WorkItem.
+
+
+        :param omschrijving: The omschrijving of this WorkItem.
+        :type omschrijving: str
+        """
+
+        self._omschrijving = omschrijving
+
+    @property
+    def plaats(self):
+        """Gets the plaats of this WorkItem.
+
+
+        :return: The plaats of this WorkItem.
+        :rtype: str
+        """
+        return self._plaats
+
+    @plaats.setter
+    def plaats(self, plaats):
+        """Sets the plaats of this WorkItem.
+
+
+        :param plaats: The plaats of this WorkItem.
+        :type plaats: str
+        """
+
+        self._plaats = plaats
+
+    @property
+    def postcode(self):
+        """Gets the postcode of this WorkItem.
+
+
+        :return: The postcode of this WorkItem.
+        :rtype: str
+        """
+        return self._postcode
+
+    @postcode.setter
+    def postcode(self, postcode):
+        """Sets the postcode of this WorkItem.
+
+
+        :param postcode: The postcode of this WorkItem.
+        :type postcode: str
+        """
+
+        self._postcode = postcode
+
+    @property
+    def project_nummer(self):
+        """Gets the project_nummer of this WorkItem.
+
+
+        :return: The project_nummer of this WorkItem.
+        :rtype: str
+        """
+        return self._project_nummer
+
+    @project_nummer.setter
+    def project_nummer(self, project_nummer):
+        """Sets the project_nummer of this WorkItem.
+
+
+        :param project_nummer: The project_nummer of this WorkItem.
+        :type project_nummer: str
+        """
+
+        self._project_nummer = project_nummer
+
+    @property
+    def status(self):
+        """Gets the status of this WorkItem.
+
+
+        :return: The status of this WorkItem.
+        :rtype: str
+        """
+        return self._status
+
+    @status.setter
+    def status(self, status):
+        """Sets the status of this WorkItem.
+
+
+        :param status: The status of this WorkItem.
+        :type status: str
+        """
+
+        self._status = status
+
+    @property
+    def straat(self):
+        """Gets the straat of this WorkItem.
+
+
+        :return: The straat of this WorkItem.
+        :rtype: str
+        """
+        return self._straat
+
+    @straat.setter
+    def straat(self, straat):
+        """Sets the straat of this WorkItem.
+
+
+        :param straat: The straat of this WorkItem.
+        :type straat: str
+        """
+
+        self._straat = straat
+
+    @property
+    def toevoeging(self):
+        """Gets the toevoeging of this WorkItem.
+
+
+        :return: The toevoeging of this WorkItem.
+        :rtype: str
+        """
+        return self._toevoeging
+
+    @toevoeging.setter
+    def toevoeging(self, toevoeging):
+        """Sets the toevoeging of this WorkItem.
+
+
+        :param toevoeging: The toevoeging of this WorkItem.
+        :type toevoeging: str
+        """
+
+        self._toevoeging = toevoeging
+
+    @property
+    def uren_categorie_code(self):
+        """Gets the uren_categorie_code of this WorkItem.
+
+
+        :return: The uren_categorie_code of this WorkItem.
+        :rtype: str
+        """
+        return self._uren_categorie_code
+
+    @uren_categorie_code.setter
+    def uren_categorie_code(self, uren_categorie_code):
+        """Sets the uren_categorie_code of this WorkItem.
+
+
+        :param uren_categorie_code: The uren_categorie_code of this WorkItem.
+        :type uren_categorie_code: str
+        """
+
+        self._uren_categorie_code = uren_categorie_code
+
+    @property
+    def werkbon_nummer(self):
+        """Gets the werkbon_nummer of this WorkItem.
+
+
+        :return: The werkbon_nummer of this WorkItem.
+        :rtype: str
+        """
+        return self._werkbon_nummer
+
+    @werkbon_nummer.setter
+    def werkbon_nummer(self, werkbon_nummer):
+        """Sets the werkbon_nummer of this WorkItem.
+
+
+        :param werkbon_nummer: The werkbon_nummer of this WorkItem.
+        :type werkbon_nummer: str
+        """
+
+        self._werkbon_nummer = werkbon_nummer
+
+    @property
+    def werkbon_type(self):
+        """Gets the werkbon_type of this WorkItem.
+
+
+        :return: The werkbon_type of this WorkItem.
+        :rtype: str
+        """
+        return self._werkbon_type
+
+    @werkbon_type.setter
+    def werkbon_type(self, werkbon_type):
+        """Sets the werkbon_type of this WorkItem.
+
+
+        :param werkbon_type: The werkbon_type of this WorkItem.
+        :type werkbon_type: str
+        """
+
+        self._werkbon_type = werkbon_type
+
+    @property
+    def geometry(self):
+        """Gets the geometry of this WorkItem.
+
+
+        :return: The geometry of this WorkItem.
+        :rtype: Geometry
+        """
+        return self._geometry
+
+    @geometry.setter
+    def geometry(self, geometry):
+        """Sets the geometry of this WorkItem.
+
+
+        :param geometry: The geometry of this WorkItem.
+        :type geometry: Geometry
+        """
+
+        self._geometry = geometry
